welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def sol(){
  baisseBrosse()
  avance()
  leveBrosse()
  gauche()
  avance()
  baisseBrosse()
  recule()
  leveBrosse()
  droite()
  avance()
  baisseBrosse()
  avance()
  leveBrosse()
  
}

def faireV(){
  avance(2)
  sol()
  avance(2)
  gauche()
    
}

var compt:Int=0
for compt(<-1 to 4){
  faireV()
}